--- a/counter/package.json
+++ b/counter/package.json
@@ -6,10 +6,12 @@
   "main": "src/index.js",
   "dependencies": {
     "@testing-library/react": "^9.3.0",
+    "@testing-library/react-hooks": "^3.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-script": "^2.0.5",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-test-renderer": "^16.11.0"
   },
   "devDependencies": {
     "typescript": "3.3.3"
