--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.1.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
